# sleppa

./: Cargo.toml  README.md  sleppa.toml
.github/workflows/: workflow-runs-purge.yml
crates/sleppa_changelog/: Cargo.toml
crates/sleppa_changelog/src/: constants.rs  errors.rs  lib.rs  tests.rs
crates/sleppa_code_archiver/: Cargo.toml
crates/sleppa_code_archiver/src/: errors.rs  lib.rs
crates/sleppa_commit_analyzer/: Cargo.toml  README.md  sleppa_commit_analyzer.toml
crates/sleppa_commit_analyzer/src/: constants.rs  errors.rs  lib.rs  tests.rs
crates/sleppa_commit_analyzer/src/configuration/: errors.rs  mod.rs  tests.rs
crates/sleppa_commit_analyzer/src/repositories/: errors.rs  github.rs  mod.rs
crates/sleppa_config_parser/: Cargo.toml
crates/sleppa_config_parser/src/: error.rs  lib.rs
crates/sleppa_configuration/: Cargo.toml
crates/sleppa_configuration/src/: constants.rs  error.rs  errors.rs  lib.rs  tests.rs
crates/sleppa_notifier/: Cargo.toml
crates/sleppa_notifier/src/: constants.rs  errors.rs  lib.rs  tests.rs
crates/sleppa_notifier/src/mattermost/: constants.rs  errors.rs  mod.rs  tests.rs
crates/sleppa_primitives/: Cargo.toml
crates/sleppa_primitives/src/: constants.rs  lib.rs
crates/sleppa_primitives/src/repositories/: errors.rs  github.rs  mod.rs  tests.rs
crates/sleppa_versioner/: Cargo.toml
crates/sleppa_versioner/src/: errors.rs  lib.rs  tests.rs
sample/: sleppa.sample.toml  sleppa.toml
