[workspace]
members = ["crates/*"]

# Global package attributes
[workspace.package]
authors = ["Sofair Contributors <info@sofair.io>"]
license = "MIT or Apache-2.0"
documentation = "https://github.com/SofairOfficial/sleppa"
homepage = "https://github.com/SofairOfficial/sleppa"
repository = "https://github.com/SofairOfficial/sleppa"
edition = "2021"
rust-version = "1.69"


# Global dependencies
[workspace.dependencies]

# Local dependencies
sleppa_configuration = { version = "0.1.0", path = "crates/sleppa_configuration" }
sleppa_commit_analyzer = { version = "0.1.0", path = "crates/sleppa_commit_analyzer" }
sleppa_primitives = { version = "0.1.0", path = "crates/sleppa_primitives" }

# Errors processing
thiserror = { version = "1.0.40" }

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
