[workspace]
members = ["crates/*"]

# Global package attributes
[workspace.package]
authors = ["Sofair Contributors <info@sofair.io>"]
license = "MIT or Apache-2.0"
documentation = "https://github.com/SofairOfficial/sleppa"
homepage = "https://github.com/SofairOfficial/sleppa"
repository = "https://github.com/SofairOfficial/sleppa"
edition = "2021"
rust-version = "1.69"


# Global dependencies
[workspace.dependencies]

# Local dependencies
sleppa_changelog = { version = "0.1.0", path = "crates/sleppa_changelog" }
sleppa_code_archiver = { version = "0.1.0", path = "crates/sleppa_code_archiver" }
sleppa_commit_analyzer = { version = "0.1.0", path = "crates/sleppa_commit_analyzer" }
sleppa_configuration = { version = "0.1.0", path = "crates/sleppa_configuration" }
sleppa_notifier = { version = "0.1.0", path = "crates/sleppa_notifier" }
sleppa_primitives = { version = "0.1.0", path = "crates/sleppa_primitives" }
sleppa_versioner = { version = "0.1.0", path = "crates/sleppa_versioner" }

# Errors processing
thiserror = { version = "^1.0" }

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
