[package]
name = "sleppa_code_archiver"
description = "Produces a release on github with archived srouce code."
version = "0.1.0"

keywords = [
    "Sleppa",
    "release",
    "semantic-release",
    "github",
    "code-archiver",
    "archive",
    "release-automation",
    "semantic-version",
    "semver",
    "release-workflow",
]

categories = ["Development tools"]

edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Local dependencies
sleppa_primitives = { workspace = true }

# External dependencies
octocrab = { version = "^0.20" }

# Errors and logs processing
thiserror = { workspace = true }

[dev-dependencies]

[lib]
name = "sleppa_code_archiver"
crate-type = ["lib"]
path = "src/lib.rs"
