[package]
name = "sleppa_commit_analyzer"
description = "Analyzer calculating a semantic release version based on commit messages contents."
version = "0.1.0"

keywords = ["Sleppa", "release-automation", "semantic-release", "git-commit"]

categories = ["Development tools"]

edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Local dependencies
sleppa_primitives = { workspace = true }
sleppa_configuration = { workspace = true }

# External dependencies
regex = { version = "^1.8" }
serde = { version = "^1.0", features = ["derive"] }
tempfile = { version = "^3.5" }
toml = { version = "^0.7" }

# Errors and logs processing
thiserror = { workspace = true }

[dev-dependencies]


[lib]
name = "sleppa_commit_analyzer"
crate-type = ["lib"]
path = "src/lib.rs"
