[package]
name = "sleppa_configuration"
description = "Configuration management package"
version = "0.1.0"

keywords = [
    "Sleppa",
    "release-automation",
    "semantic-release",
    "configuration",
    "parser",
    "toml",
]

categories = ["Configuration"]

edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

sleppa_primitives = { workspace = true }

# External dependencies
serde = { version = "^1.0", features = ["derive"] }

# Errors and logs processing
thiserror = { workspace = true }

[lib]
name = "sleppa_configuration"
crate-type = ["lib"]
path = "src/lib.rs"
