[package]
name = "sleppa_primitives"
description = "Contains the convenient primitives, such as, data structures, macros or reusable source code."
version = "0.1.0"

keywords = ["Sleppa", "primitives"]

categories = ["Development tools"]

edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]

# Local dependencies

# External dependencies
async-trait = { version = "^0.1" }
octocrab = { version = "^0.20" }
regex = { version = "^1.8" }
serde = { version = "^1.0", features = ["derive"] }

# Errors and logs processing
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "^1.28", default-features = false, features = ["macros"] }
tokio-test = { version = "^0.4" }

[lib]
name = "sleppa_primitives"
crate-type = ["lib"]
path = "src/lib.rs"
